[package]
name = "bmd"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Terminal TUI markdown viewer with vim bindings, mermaid diagrams, and in-app document navigation"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/manji-0/bmd"
homepage = "https://github.com/manji-0/bmd"
authors = ["manji-0"]
keywords = ["markdown", "tui", "terminal", "viewer", "vim"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    ".github/",
    ".devbox/",
    ".cargo/",
    ".rustup/",
    ".sccache/",
    ".pi/",
    "PLAN.md",
    "devbox.json",
    "prek.toml",
]

[[bin]]
name = "bmd"
path = "src/main.rs"

[lib]
name = "bmd"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
merman = { version = "0.6.2", features = ["raster"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
serde = { version = "1", features = ["derive"] }
syntect = "5"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"
unicode-segmentation = "1.13"
parserst = "0.1.1"
acdc-parser = "0.9.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.release.build-override]
opt-level = 0
